# Load-Balancer

./: .gitignore  CMakeLists.txt  README.md  arch.txt  multi_server.js
include/: backendPool.hpp  healthcheck.hpp  metrics.hpp
src/: backendPool.cpp  healthcheck.cpp  main.cpp  metrics.cpp
